sample/retrieveUnpackaged/objects/Segment_Question__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Segment Questions</relationshipLabel>
        <relationshipName>Segment_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Segment Questions</relationshipLabel>
        <relationshipName>Segment_Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <label>Segment Question</label>
    <nameField>
        <displayFormat>SQ-{00}</displayFormat>
        <label>Segment Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>